2010-12-05 19:10-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/4Data/GormImageViewAttributesInspector.m: Archive
	by name.

2010-12-05 18:12-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/4Data/GormImageViewAttributesInspector.m: Remove check for
	name so that images which currently do not reference a known image
	can be saved by name.
	* Palettes/4Data/GormNSImageViewInspector.gorm: Add connection
	to ok: from the text field.

2010-11-01 Riccardo Mottola

	* Plugins/Xib/GormXibWrapperLoader.m
	Removed c99-ism

2010-09-39 Niels Grewe <niels.grewe@halbordnung.de>

	* Gorm.m: Replace calls to sel_eq() with sel_isEqual() for
	compatibility with the Objective-C 2 runtime API. Whitespace
	cleanup.

	Small tweak for Objective-C 2 runtime API compatibility.

2010-09-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Palettes/4Data/GormTextViewAttributesInspector.h: 
	* Palettes/4Data/GormTextViewAttributesInspector.m (-ok:, -revert:): 
	* Palettes/4Data/GormNSTextViewInspector.gorm: Add switches to the
	text view inspector to control use of an undo manager and the find
	panel, respectively.

2010-09-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Palettes/2Controls/GormButtonEditor.m (-mouseDown): Fix bug
	where a button's title was lost when starting editing by double
	clicking into the button.

2010-09-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* English.lproj/Gorm.gorm: Actually bring the "Recent Documents"
	menu to life.

2010-09-15  Eric Wasylishen <ewasylishen@gmail.com>

	* GormCore/GormClassManager.m:
	* GormCore/GormObjectInspector.m: Tweaks to use ObjectiveC2 runtime
	API functions. Now Gorm works on libobjc2.

2010-08-04 13:20-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* English.lproj/Gorm.gorm: Add "Recent Documents" to menu.
	* GormCore/GormClassManager.m: Post notifications when files 
	are created.
	* GormInfo.plist: Update my email address and list of authors to
	include Wolfgang and Adam.
